--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,13 +15,7 @@ commands:
     steps:
       - run:
           command: |
-            # set +e
-            # git diff --name-only HEAD << parameters.since >> | grep << parameters.in >>
-            # Halt without failing if grep didn't find a match
-            # if [ $? -eq 1 ]; then
-            #   echo "AM I RUNNING"
-            circleci-agent step halt
-            # fi
+            git diff --name-only HEAD << parameters.since >> | grep << parameters.in >>
 
   write-build-info:
     description: "Write relevant info to the current build/deploy to a file for referencing"
@@ -67,10 +61,9 @@ jobs:
           command: |
             echo "export LAST_PUBLISHED_COMMIT=$(curl -s -f https://<< parameters.doc_site >>/storybook/BUILD.txt | sed -r 's/^.*=(.*)$/\1/')" >> $BASH_ENV
             source $BASH_ENV
-      - run: circleci-agent step halt
-      # - check-for-changes:
-      #     in: "formation-react"
-      #     since: $LAST_PUBLISHED_COMMIT
+      - check-for-changes:
+          in: "formation-react"
+          since: $LAST_PUBLISHED_COMMIT
 
   publish-storybook:
     executor: aws-cli/default
