--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -92,8 +92,18 @@ workflows:
       - needs-to-publish-storybook:
           doc_site: dev-design.va.gov
       - publish-storybook:
-          # requires:
-          #   - needs-to-publish-storybook
+          requires:
+            - needs-to-publish-storybook
           bucket: dev-design.va.gov
+          context:
+            - Platform
+  publish-staging:
+    jobs:
+      - needs-to-publish-storybook:
+          doc_site: staging-design.va.gov
+      - publish-storybook:
+          requires:
+            - needs-to-publish-storybook
+          bucket: staging-design.va.gov
           context:
             - Platform
