--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -101,9 +101,9 @@ workflows:
     jobs:
       - needs-to-publish-storybook:
           doc_site: staging-design.va.gov
-      - publish-storybook:
-          requires:
-            - needs-to-publish-storybook
-          bucket: staging-design.va.gov
-          context:
-            - Platform
+      # - publish-storybook:
+      #     requires:
+      #       - needs-to-publish-storybook
+      #     bucket: staging-design.va.gov
+      #     context:
+      #       - Platform
