Designer-facing documentation in storybook (#546)
* Add react-html-parser for static markup stories

* Add formation, even though it's buggy in storybook

* Move usage to .stories.mdx file

* Add accordion static markup stories

* Add collapsible panel usage

* Build stories from the stories directory

* Add a README to be clear what the stories dir is for

* Add address-block story

* Accordion usage heading update

* AlertBox usage

* Button stories

* Featured content

* Form controls usage

* Horizontal rules

* Labels usage

* Process list usage

* Group progress bars

* PromoBanner usage

* Sidenav stories

* Table usage

* Alphabetize sidenav

* Remove stories from form controls usage

* Remove Story from alert box usage

* Remove Story from horizontal rules

* Remove Story from labels

* Remove Story from address block

* Remove Story from featured content

* Remove unused Template

* Remove Story from promo banner usage

* Remove Story from buttons

* Give the buttons usage its own page :facepalm:

* Remove Story from sidenav usage

* Remove Story from process list

* Add "More in this section" button

* Remove the template variable

* URLs are dumb :unamused:

--- a/packages/formation-react/package.json
+++ b/packages/formation-react/package.json
@@ -51,6 +51,7 @@
     "@storybook/react": "^6.1.1",
     "@whitespace/storybook-addon-html": "^2.0.1",
     "babel-loader": "^8.1.0",
+    "react-html-parser": "^2.0.2",
     "react-is": "^17.0.1"
   }
 }
