--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -93,7 +93,8 @@ jobs:
           command: yarn install
       - run:
           name: "Build Storybook"
-          command: cd packages/formation-react && yarn build-storybook
+          working_directory: ./packages/formation-react
+          command: yarn build-storybook
       - write-build-info:
           dest: "packages/formation-react/storybook-static"
       - copy-to-s3:
