Of course we need this

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -87,6 +87,7 @@ jobs:
     steps:
       - checkout
       - aws-cli/setup
+      - run: yarn install
       - run:
           working_directory: ./packages/formation-react
           command: yarn install
