--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -89,8 +89,12 @@ jobs:
       - aws-cli/setup
       - run: yarn install
       - run:
+          working_directory: ./packages/formation-react
+          command: yarn install
+      - run:
           name: "Build Storybook"
-          command: cd packages/formation-react && yarn build-storybook
+          working_directory: ./packages/formation-react
+          command: yarn build-storybook
       - write-build-info:
           dest: "packages/formation-react/storybook-static"
       - copy-to-s3:
