--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -10,18 +10,18 @@
     "@mdx-js/mdx": "^1.6.5",
     "@mdx-js/react": "^1.6.5",
     "@mdx-js/tag": "^0.20.3",
-    "babel-preset-gatsby": "^0.4.9",
+    "babel-preset-gatsby": "^0.8.0",
     "classnames": "^2.2.6",
     "gatsby": "^2.23.3",
     "gatsby-image": "^2.4.7",
     "gatsby-plugin-google-tagmanager": "^2.3.11",
-    "gatsby-plugin-manifest": "^2.4.11",
+    "gatsby-plugin-manifest": "^2.8.0",
     "gatsby-plugin-mdx": "file:plugins/gatsby-plugin-mdx(forked)",
     "gatsby-plugin-react-helmet": "^3.0.2",
-    "gatsby-plugin-sass": "^2.0.7",
-    "gatsby-plugin-sharp": "2.6.11",
+    "gatsby-plugin-sass": "^2.7.0",
+    "gatsby-plugin-sharp": "^2.10.0",
     "gatsby-plugin-sitemap": "^2.4.5",
-    "gatsby-remark-images": "^3.3.10",
+    "gatsby-remark-images": "^3.7.0",
     "gatsby-remark-mermaid": "^2.0.0",
     "gatsby-remark-slug": "^0.1.0",
     "gatsby-source-filesystem": "2.3.19",
@@ -29,7 +29,7 @@
     "gatsby-transformer-javascript-frontmatter": "^2.3.5",
     "gatsby-transformer-react-docgen": "^5.2.5",
     "gatsby-transformer-remark": "^2.8.15",
-    "gatsby-transformer-sharp": "^2.5.5",
+    "gatsby-transformer-sharp": "^2.8.0",
     "gh-pages": "^3.0.0",
     "node-github-graphql": "^0.2.7",
     "node-sass": "^4.11.0",
