--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -24,7 +24,7 @@
     "gatsby-remark-images": "^3.8.0",
     "gatsby-remark-mermaid": "^2.0.0",
     "gatsby-remark-slug": "^0.1.0",
-    "gatsby-source-filesystem": "2.3.19",
+    "gatsby-source-filesystem": "^2.8.0",
     "gatsby-source-git": "^1.0.2",
     "gatsby-transformer-javascript-frontmatter": "^2.3.5",
     "gatsby-transformer-react-docgen": "^5.2.5",
