Remove branch filter for quick deploy test

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -131,9 +131,9 @@ workflows:
   publish-prod:
     jobs:
       - needs-to-publish-storybook:
-          filters:
-            branches:
-              only: master
+          # filters:
+          #   branches:
+          #     only: master
           doc_site: design.va.gov
       - publish-storybook:
           requires:
