--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -16,7 +16,7 @@
     "gatsby-image": "^2.8.0",
     "gatsby-plugin-google-tagmanager": "^2.3.11",
     "gatsby-plugin-manifest": "^2.9.0",
-    "gatsby-plugin-mdx": "^1.7.0",
+    "gatsby-plugin-mdx": "file:plugins/gatsby-plugin-mdx(forked)",
     "gatsby-plugin-react-helmet": "^3.7.0",
     "gatsby-plugin-sass": "^2.7.0",
     "gatsby-plugin-sharp": "^2.11.1",
