--- a/package.json
+++ b/package.json
@@ -79,12 +79,11 @@
     "karma-chrome-launcher": "^2.2.0",
     "karma-mocha": "^2.0.1",
     "karma-webpack": "^2.0.5",
-    "lerna": "^3.10.5",
+    "lerna": "^4.0.0",
     "mini-css-extract-plugin": "^0.5.0",
     "mkdirp": "^0.5.1",
     "mocha": "^4.0.1",
     "ncp": "^2.0.0",
-    "node-sass": "^4.8.3",
     "postcss-loader": "^3.0.0",
     "promisify-node": "^0.5.0",
     "react": "^16.7.0",
@@ -94,7 +93,8 @@
     "react-test-renderer": "^16.7.0",
     "recast": "^0.20.4",
     "resolve-url-loader": "^2.2.0",
-    "sass-loader": "^6.0.7",
+    "sass": "^1.37.5",
+    "sass-loader": "^12.1.0",
     "semver": "^7.3.2",
     "sinon": "^4.1.6",
     "style-loader": "^0.19.0",
@@ -102,7 +102,7 @@
     "url-loader": "^0.6.2",
     "uswds": "1.6.10",
     "vagov-eslint": "file:./packages/vagov-eslint",
-    "webpack": "4.29.6"
+    "webpack": "^5.50.0"
   },
   "dependencies": {
     "graphql": "^14.5.3"
