--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -51,7 +51,8 @@
     "**/xmlhttprequest-ssl": "^1.6.2",
     "**/ssri": "^8.0.1",
     "**/is-svg": "^4.3.1",
-    "**/axios": "^0.21.1"
+    "**/axios": "^0.21.1",
+    "**/mozjpeg": "^7.1.1"
   },
   "keywords": [
     "gatsby"
