--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -52,7 +52,8 @@
     "**/ssri": "^8.0.1",
     "**/is-svg": "^4.3.1",
     "**/axios": "^0.21.1",
-    "**/mozjpeg": "^7.1.1"
+    "**/mozjpeg": "^7.1.1",
+    "**/tsd": "0.17.0"
   },
   "keywords": [
     "gatsby"
