--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -5,42 +5,7 @@
   "version": "0.1.0",
   "dependencies": {
     "@department-of-veterans-affairs/component-library": "^3.2.2",
-    "@department-of-veterans-affairs/formation": "^6.17.3",
-    "@fortawesome/fontawesome-free": "^5.8.1",
-    "@gatsby-contrib/gatsby-plugin-elasticlunr-search": "^2.2.1",
-    "@mdx-js/mdx": "^1.6.22",
-    "@mdx-js/react": "^1.6.22",
-    "@mdx-js/tag": "^0.20.3",
-    "babel-preset-gatsby": "^0.9.0",
-    "classnames": "^2.2.6",
-    "gatsby": "^2.29.1",
-    "gatsby-image": "^2.8.0",
-    "gatsby-plugin-google-tagmanager": "^2.3.11",
-    "gatsby-plugin-manifest": "^2.9.0",
-    "gatsby-plugin-mdx": "file:plugins/gatsby-plugin-mdx(forked)",
-    "gatsby-plugin-react-helmet": "^3.7.0",
-    "gatsby-plugin-sass": "^4.14.0",
-    "gatsby-plugin-sharp": "^2.11.1",
-    "gatsby-plugin-sitemap": "^2.4.5",
-    "gatsby-remark-images": "^3.8.0",
-    "gatsby-remark-mermaid": "^2.0.0",
-    "gatsby-remark-slug": "^0.1.0",
-    "gatsby-source-filesystem": "^2.8.0",
-    "gatsby-source-git": "^1.0.2",
-    "gatsby-transformer-javascript-frontmatter": "^2.3.5",
-    "gatsby-transformer-react-docgen": "^5.2.5",
-    "gatsby-transformer-remark": "^2.13.0",
-    "gatsby-transformer-sharp": "^2.9.0",
-    "gh-pages": "^3.0.0",
-    "node-github-graphql": "^0.2.7",
-    "prop-types": "^15.6.2",
-    "puppeteer": "^2.0.0",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "react-helmet": "^6.1.0",
-    "react-live": "1.12.0",
-    "uswds": "1.6.14",
-    "web-components": "https://github.com/department-of-veterans-affairs/component-library.git#wc-v0.11.2"
+    "@department-of-veterans-affairs/formation": "^6.17.3"
   },
   "resolutions": {
     "**/lodash": "^4.17.21",
