--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -38,7 +38,7 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-helmet": "^6.1.0",
-    "react-live": "1.12.0",
+    "uswds": "1.6.14",
     "web-components": "https://github.com/department-of-veterans-affairs/component-library.git#wc-v0.11.2"
   },
   "resolutions": {
