--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -32,12 +32,7 @@
     "gatsby-transformer-remark": "^2.13.0",
     "gatsby-transformer-sharp": "^2.9.0",
     "gh-pages": "^3.0.0",
-    "node-github-graphql": "^0.2.7",
-    "prop-types": "^15.6.2",
-    "puppeteer": "^2.0.0",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "react-helmet": "^6.1.0",
+    "react-live": "1.12.0",
     "uswds": "1.6.14",
     "web-components": "https://github.com/department-of-veterans-affairs/component-library.git#wc-v0.11.2"
   },
