--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -19,6 +19,7 @@
     "gatsby-plugin-manifest": "^2.9.0",
     "gatsby-plugin-mdx": "file:plugins/gatsby-plugin-mdx(forked)",
     "gatsby-plugin-react-helmet": "^3.7.0",
+    "gatsby-plugin-sass": "^4.14.0",
     "gatsby-plugin-sharp": "^2.11.1",
     "gatsby-plugin-sitemap": "^2.4.5",
     "gatsby-remark-images": "^3.8.0",
