--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -18,6 +18,8 @@
     "gatsby-plugin-google-tagmanager": "^2.3.11",
     "gatsby-plugin-manifest": "^2.9.0",
     "gatsby-plugin-mdx": "file:plugins/gatsby-plugin-mdx(forked)",
+    "gatsby-plugin-react-helmet": "^3.7.0",
+    "gatsby-plugin-sass": "^4.14.0",
     "gatsby-remark-images": "^3.8.0",
     "gatsby-remark-mermaid": "^2.0.0",
     "gatsby-remark-slug": "^0.1.0",
