--- a/package.json
+++ b/package.json
@@ -92,11 +92,14 @@
     "react-router": "3",
     "react-test-renderer": "^16.7.0",
     "recast": "^0.20.4",
+    "resolve-url-loader": "^2.2.0",
     "sass": "~1.32.0",
     "sass-loader": "^12.1.0",
     "semver": "^7.3.2",
     "sinon": "^4.1.6",
     "style-loader": "^0.19.0",
+    "svg-url-loader": "^2.3.0",
+    "url-loader": "^0.6.2",
     "uswds": "1.6.14",
     "vagov-eslint": "file:./packages/vagov-eslint",
     "webpack": "^5.50.0"
