--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "css-loader": "^0.28.7",
     "enzyme": "^3.1.0",
     "enzyme-adapter-react-16": "^1.7.1",
+    "file-loader": "4.0.0",
     "fs-extra": "^7.0.1",
     "glob": "^7.1.2",
     "is-docker": "^1.1.0",
