--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -37,6 +37,7 @@ jobs:
   testing:
     name: Testing
     runs-on: ubuntu-latest
+    needs: linting
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -58,6 +59,7 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
+    needs: [linting, testing]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -90,6 +92,7 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
+    needs: [linting, build]
     if: github.ref == 'refs/heads/master'
     steps:
       - name: Checkout
