--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -90,7 +90,7 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
-    needs: [linting, build]
+    needs: [linting, testing, build]
     if: github.ref == 'refs/heads/master'
     steps:
       - name: Checkout
