--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -104,6 +104,7 @@ jobs:
   #         path: |
   #           .cache/yarn
   #           node_modules
+
   #     - name: Configure AWS credentials
   #       uses: aws-actions/configure-aws-credentials@v1
   #       with:
@@ -111,16 +112,17 @@ jobs:
   #         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   #         aws-region: us-gov-west-1
 
-  #     - name: Get va-vsp-bot token
+  #     - name: Get va-bot password
   #       uses: marvinpinto/action-inject-ssm-secrets@v1.2.1
   #       with:
-  #         ssm_parameter: /devops/VA_VSP_BOT_GITHUB_TOKEN
-  #         env_variable_name: VA_VSP_BOT_GITHUB_TOKEN
+  #         ssm_parameter: /devops/github/va-bot/password
+  #         env_variable_name: VA_BOT_PASSWORD
 
   #     - name: Config Git
   #       run: |
   #         git config --global user.email james.kassemi+vabot@adhocteam.us
   #         git config --global user.name va-bot
   #         git config --global credential.helper '${{ github.workspace }}/scripts/credential-helper.sh'
+
   #     - name: Deploy
-  #       run: GITHUB_API_KEY=${{ env.GIT_PASSWORD }} npm run deploy
+  #       run: GITHUB_API_KEY=${{ env.VA_BOT_PASSWORD }} npm run deploy
