--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -118,7 +118,7 @@ jobs:
           ssm_parameter: /devops/VA_VSP_BOT_GITHUB_TOKEN
           env_variable_name: VA_VSP_BOT_GITHUB_TOKEN
 
-      - name: Set identity
+      - name: Set username and email
         run: |
           git config user.email va-vsp-bot@users.noreply.github.com
           git config user.name va-vsp-bot
